MMA-7327 bruker nytt safintern-grensesnitt for tilknyttedejournalposter-queriet